--- a/src/Views/CadastroVendedor.fxml
+++ b/src/Views/CadastroVendedor.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CadastroVendedorController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CadastroVendedorController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(14, 78, 167, 1);">
          <children>
@@ -21,6 +19,7 @@
                   <Button fx:id="cadastrado" layoutX="18.0" layoutY="253.0" mnemonicParsing="false" onAction="#ja_cadastrado" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Já Sou Cadastrado" textFill="WHITE" />
                   <Button fx:id="cadastrar_vendedor" layoutX="181.0" layoutY="260.0" mnemonicParsing="false" onAction="#cadastrar_vendedor" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Vendedor" textFill="WHITE" AnchorPane.bottomAnchor="26.0" />
                   <Label layoutX="80.0" layoutY="28.0" style="-fx-font-weight: bold;" text="CADASTRO DE VENDEDOR" />
+                  <Label fx:id="label_aviso" layoutX="197.0" layoutY="291.0" prefHeight="17.0" prefWidth="129.0" />
                </children>
             </AnchorPane>
          </children>
