--- a/src/Views/CadastroDeProduto.fxml
+++ b/src/Views/CadastroDeProduto.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CadastroDeProdutoController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CadastroDeProdutoController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(14, 78, 167, 1);">
          <children>
@@ -19,9 +17,10 @@
                   <TextField fx:id="tipo_produto" alignment="CENTER" layoutX="18.0" layoutY="132.0" prefHeight="34.0" prefWidth="325.0" promptText="Tipo do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
                   <TextField fx:id="estoque" alignment="CENTER" layoutX="18.0" layoutY="176.0" prefHeight="34.0" prefWidth="325.0" promptText="Estoque" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
                   <TextField fx:id="descricao" alignment="CENTER" layoutX="19.0" layoutY="220.0" prefHeight="45.0" prefWidth="325.0" promptText="Descrição" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
-                  <Button fx:id="cadastrado" layoutX="18.0" layoutY="275.0" mnemonicParsing="false" onAction="#ja_cadastrado" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Cancelar" textFill="WHITE" />
-                  <Button fx:id="cadastrar_produto" layoutX="182.0" layoutY="263.0" mnemonicParsing="false" onAction="#cadastrar_produto" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Produto" textFill="WHITE" AnchorPane.bottomAnchor="16.0" />
-                  <Label layoutX="87.0" layoutY="14.0" style="-fx-font-weight: bold;" text="CADASTRO DE PRODUTO" textFill="#0b3fc2" />
+                  <Button fx:id="cancelar" layoutX="18.0" layoutY="275.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Cancelar" textFill="WHITE" />
+                  <Button fx:id="cadastrar_produto" layoutX="182.0" layoutY="275.0" mnemonicParsing="false" onAction="#cadastrar_produto" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Produto" textFill="WHITE" AnchorPane.bottomAnchor="20.0" />
+                  <Label layoutX="110.0" layoutY="14.0" style="-fx-font-weight: bold;" text="CADASTRO DE PRODUTO" textFill="#0b3fc2" />
+                  <Label fx:id="label_aviso" layoutX="194.0" layoutY="312.0" prefHeight="0.0" prefWidth="127.0" />
                </children>
             </AnchorPane>
          </children>
