--- a/src/Views/Perfil.fxml
+++ b/src/Views/Perfil.fxml
@@ -48,17 +48,17 @@
                <children>
                   <AnchorPane cacheShape="false" focusTraversable="true" layoutX="50.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgb(173, 188, 242, 1); -fx-background-radius: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                      <children>
-                        <TextField layoutX="72.0" layoutY="26.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="perfil_id" layoutX="72.0" layoutY="26.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <Label layoutX="36.0" layoutY="30.0" text="ID:" />
                         <Label layoutX="21.0" layoutY="72.0" text="Nome:" />
                         <Label layoutX="10.0" layoutY="115.0" text="Vendas:" />
                         <Label layoutX="13.0" layoutY="208.0" text="Senha:" />
                         <Label layoutX="22.0" layoutY="162.0" text="Email:" />
-                        <Button layoutX="45.0" layoutY="261.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1);" text="Atualizar Dados" textFill="WHITE" />
-                        <TextField layoutX="72.0" layoutY="68.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField layoutX="72.0" layoutY="157.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <Button fx:id="perfil_atualizar" layoutX="45.0" layoutY="261.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1);" text="Atualizar Dados" textFill="WHITE" />
+                        <TextField fx:id="perfil_nome" layoutX="72.0" layoutY="68.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="perfil_email" layoutX="72.0" layoutY="157.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <TextField layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="perfil_senha" layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                      </children>
                   </AnchorPane>
                </children>
@@ -72,7 +72,7 @@
                               <Image url="@image.jpg" />
                            </image>
                         </ImageView>
-                        <TextField layoutX="30.0" layoutY="200.0" prefHeight="96.0" prefWidth="200.0" style="-fx-background-radius: 10;" />
+                        <TextField fx:id="perfil_campos_adicionais" layoutX="30.0" layoutY="200.0" prefHeight="96.0" prefWidth="200.0" style="-fx-background-radius: 10;" />
                         <Label layoutX="32.0" layoutY="177.0" style="-fx-font-weight: bold;" text="Campos Adicionais:" textFill="#1e54e1" />
                      </children>
                   </AnchorPane>
