Teste cadastro produto

--- a/src/Views/MenuVendas.fxml
+++ b/src/Views/MenuVendas.fxml
@@ -55,7 +55,7 @@
                      </font>
                   </Label>
                   <TextField layoutX="13.0" layoutY="132.0" prefHeight="13.0" prefWidth="80.0" style="-fx-background-radius: 10;" />
-                  <Button layoutX="56.0" layoutY="172.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="115.0" style="-fx-background-radius: 20; -fx-background-color: rgba(30, 84, 225, 1);" text="Adcionar Produto" textFill="WHITE">
+                  <Button layoutX="56.0" layoutY="172.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="115.0" style="-fx-background-radius: 20; -fx-background-color: rgba(30, 84, 225, 1);" text="Adicionar Produto" textFill="WHITE">
                      <font>
                         <Font size="11.0" />
                      </font>
