--- a/src/Views/MenuAdministrador.fxml
+++ b/src/Views/MenuAdministrador.fxml
@@ -47,7 +47,7 @@
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button layoutX="134.0" layoutY="16.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="75.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Adicionar Produtos" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                        <Button fx:id="cad_produto" layoutX="134.0" layoutY="16.0" mnemonicParsing="false" onAction="#ir_prod_cad" prefHeight="43.0" prefWidth="75.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Produtos" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -62,7 +62,7 @@
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button layoutX="399.0" layoutY="16.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="75.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Vendedor" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                        <Button fx:id="cad_vendedor" layoutX="399.0" layoutY="16.0" mnemonicParsing="false" onAction="#ir_vend_cadastro" prefHeight="43.0" prefWidth="75.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Vendedor" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
