--- a/src/Views/MenuAdministrador.fxml
+++ b/src/Views/MenuAdministrador.fxml
@@ -5,7 +5,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -34,9 +36,9 @@
                         <Insets bottom="10.0" />
                      </opaqueInsets>
                   </Label>
-                  <AnchorPane layoutY="35.0" prefHeight="365.0" prefWidth="602.0" style="-fx-background-color: rgba(229, 234, 250);">
+                  <AnchorPane layoutY="35.0" prefHeight="365.0" prefWidth="600.0" style="-fx-background-color: rgba(229, 234, 250);">
                      <children>
-                        <TextField layoutX="41.0" layoutY="73.0" prefHeight="35.0" prefWidth="520.0" promptText="Buscar produto por ID ou nome" style="-fx-background-radius: 20;" />
+                        <TextField fx:id="busca_admin" layoutX="40.0" layoutY="96.0" prefHeight="35.0" prefWidth="435.0" promptText="Buscar produto por ID ou nome" style="-fx-background-radius: 20;" />
                         <Button layoutX="44.0" layoutY="16.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="75.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Buscar Vendas" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
@@ -97,6 +99,18 @@
                               <Image url="@image.jpg" />
                            </image>
                         </ImageView>
+                        <Button fx:id="pesquisar_admin" layoutX="490.0" layoutY="96.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                        </Button>
+                        <RadioButton fx:id="rb_id" layoutX="54.0" layoutY="72.0" mnemonicParsing="false" selected="true" text="ID">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="selecao_pesquisa" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="rb_nome" layoutX="122.0" layoutY="72.0" mnemonicParsing="false" text="Nome" toggleGroup="$selecao_pesquisa" />
+                        <Label fx:id="label_aviso" layoutX="195.0" layoutY="72.0" prefHeight="17.0" prefWidth="155.0" />
                      </children>
                   </AnchorPane>
                </children>
