--- a/src/Views/CadastroDeProduto.fxml
+++ b/src/Views/CadastroDeProduto.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -10,17 +11,19 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(14, 78, 167, 1);">
          <children>
-            <AnchorPane layoutX="120.0" layoutY="38.0" prefHeight="325.0" prefWidth="360.0" style="-fx-background-color: rgba(255, 255, 255, 1); -fx-background-radius: 20;" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="38.0">
+            <AnchorPane layoutX="70.0" layoutY="25.0" prefHeight="355.0" prefWidth="460.0" style="-fx-background-color: rgba(255, 255, 255, 1); -fx-background-radius: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="25.0">
                <children>
-                  <TextField fx:id="nome_produto" alignment="CENTER" layoutX="19.0" layoutY="44.0" prefHeight="34.0" prefWidth="325.0" promptText="Nome do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" AnchorPane.bottomAnchor="247.0" AnchorPane.topAnchor="44.0" />
-                  <TextField fx:id="preco_produto" alignment="CENTER" layoutX="18.0" layoutY="88.0" prefHeight="34.0" prefWidth="325.0" promptText="Preço do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
-                  <TextField fx:id="tipo_produto" alignment="CENTER" layoutX="18.0" layoutY="132.0" prefHeight="34.0" prefWidth="325.0" promptText="Tipo do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
-                  <TextField fx:id="estoque" alignment="CENTER" layoutX="18.0" layoutY="176.0" prefHeight="34.0" prefWidth="325.0" promptText="Estoque" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
-                  <TextField fx:id="descricao" alignment="CENTER" layoutX="19.0" layoutY="220.0" prefHeight="45.0" prefWidth="325.0" promptText="Descrição" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
-                  <Button fx:id="cancelar" layoutX="18.0" layoutY="275.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Cancelar" textFill="WHITE" />
-                  <Button fx:id="cadastrar_produto" layoutX="182.0" layoutY="275.0" mnemonicParsing="false" onAction="#cadastrar_produto" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Produto" textFill="WHITE" AnchorPane.bottomAnchor="20.0" />
-                  <Label layoutX="110.0" layoutY="14.0" style="-fx-font-weight: bold;" text="CADASTRO DE PRODUTO" textFill="#0b3fc2" />
-                  <Label fx:id="label_aviso" layoutX="194.0" layoutY="312.0" prefHeight="0.0" prefWidth="127.0" />
+                  <TextField fx:id="nome_produto" alignment="CENTER" layoutX="12.0" layoutY="40.0" prefHeight="34.0" prefWidth="210.0" promptText="Nome do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" AnchorPane.bottomAnchor="281.0" AnchorPane.topAnchor="40.0" />
+                  <TextField fx:id="preco_produto" alignment="CENTER" layoutX="12.0" layoutY="85.0" prefHeight="34.0" prefWidth="210.0" promptText="Preço do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
+                  <TextField fx:id="tipo_produto" alignment="CENTER" layoutX="12.0" layoutY="129.0" prefHeight="34.0" prefWidth="210.0" promptText="Tipo do Produto" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
+                  <TextField fx:id="estoque" alignment="CENTER" layoutX="12.0" layoutY="173.0" prefHeight="34.0" prefWidth="210.0" promptText="Estoque" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
+                  <TextField fx:id="descricao" alignment="CENTER" layoutX="13.0" layoutY="215.0" prefHeight="56.0" prefWidth="430.0" promptText="Descrição" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-Prompt-text-fill: rgba(0,0,0,0.8);" />
+                  <Button fx:id="cancelar" layoutX="15.0" layoutY="311.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="34.0" prefWidth="210.0" style="-fx-background-color: rgba(244, 93, 83, 1); -fx-background-radius: 20;" text="Cancelar" textFill="WHITE" />
+                  <Button fx:id="cadastrar_produto" layoutX="233.0" layoutY="281.0" mnemonicParsing="false" onAction="#cadastrar_produto" prefHeight="34.0" prefWidth="210.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Cadastrar Produto" textFill="WHITE" AnchorPane.bottomAnchor="10.0" />
+                  <Label layoutX="126.0" layoutY="12.0" style="-fx-font-weight: bold;" text="CADASTRO DE PRODUTO" textAlignment="CENTER" textFill="#0b3fc2" />
+                  <Label fx:id="label_aviso" layoutX="13.0" layoutY="277.0" prefHeight="25.0" prefWidth="430.0" textFill="RED" />
+                  <Button fx:id="escolher_imagem" layoutX="233.0" layoutY="173.0" mnemonicParsing="false" onAction="#escolher_Imagem_onAction" prefHeight="34.0" prefWidth="210.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-background-radius: 20; -fx-text-fill: rgba(0,0,0,0.8);" text="Escolher Imagem" textFill="WHITE" />
+                  <ImageView fx:id="imagem" fitHeight="124.0" fitWidth="200.0" layoutX="238.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
          </children>
