--- a/src/Views/MenuVendedor.fxml
+++ b/src/Views/MenuVendedor.fxml
@@ -6,14 +6,16 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MenuAdministradorController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MenuVendedorController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -49,13 +51,12 @@
                   </Label>
                   <AnchorPane layoutY="35.0" prefHeight="365.0" prefWidth="602.0" style="-fx-background-color: rgba(229, 234, 250);">
                      <children>
-                        <TextField layoutX="41.0" layoutY="73.0" prefHeight="35.0" prefWidth="520.0" promptText="Buscar produto por ID ou nome" style="-fx-background-radius: 20;" />
-                        <Button layoutX="177.0" layoutY="16.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="112.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Buscar Vendas" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                        <Button fx:id="buscarVendasButton" layoutX="177.0" layoutY="16.0" mnemonicParsing="false" onAction="#buscar_vendas_onAction" prefHeight="40.0" prefWidth="112.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Buscar Vendas" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button layoutX="302.0" layoutY="16.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="110.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Nova Venda" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                        <Button fx:id="novaVendaButton" layoutX="302.0" layoutY="16.0" mnemonicParsing="false" onAction="#nova_venda_onAction" prefHeight="40.0" prefWidth="110.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Nova Venda" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -92,6 +93,18 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
+                  <TextField fx:id="busca_admin" layoutX="41.0" layoutY="131.0" prefHeight="35.0" prefWidth="435.0" promptText="Buscar produto por ID ou nome" style="-fx-background-radius: 20;" />
+                  <Button fx:id="pesquisar_admin" layoutX="491.0" layoutY="131.0" mnemonicParsing="false" onAction="#pesquisar" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Button>
+                  <RadioButton fx:id="rb_id" layoutX="54.0" layoutY="101.0" mnemonicParsing="false" selected="true" text="ID">
+                  <toggleGroup>
+                        <ToggleGroup fx:id="selecao_pesquisa" />
+                           </toggleGroup>
+                  </RadioButton>
+                    <RadioButton fx:id="rb_nome" layoutX="122.0" layoutY="101.0" mnemonicParsing="false" text="Nome" toggleGroup="$selecao_pesquisa" />
                </children>
             </AnchorPane>
          </children>
